--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 
 <h1>HMI Rooms & Equipment</h1>
 
-<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23FFFFFF&amp;src=tq36t2lpaholrfvmf5vvvo33io%40group.calendar.google.com&amp;color=%23865A5A&amp;src=04aguuoi2v2ab5s2hlq3fpdsdc%40group.calendar.google.com&amp;color=%2323164E&amp;src=lkrf1dct45ih6000dio3h4hd84%40group.calendar.google.com&amp;color=%23711616&amp;src=mt7rjrmn7mc999n17fh0v6tg74%40group.calendar.google.com&amp;color=%2329527A&amp;src=8govm4taa04es44h0frehhtavk%40group.calendar.google.com&amp;color=%23333333&amp;src=uumg310j4bb0bo14ksbho3ldmc%40group.calendar.google.com&amp;color=%2323164E&amp;src=h3imfejofhi4vcbosk3oo26sks%40group.calendar.google.com&amp;color=%232952A3&amp;src=7dp2f93bbsanpemvf5numkp5mo%40group.calendar.google.com&amp;color=%232F6309&amp;src=9klgfno8eelufabiqrroh7qqoc%40group.calendar.google.com&amp;color=%236B3304&amp;src=vc294c09ropckvmeekoq98p38s%40group.calendar.google.com&amp;color=%230F4B38&amp;ctz=Europe%2FAmsterdam" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23FFFFFF&amp;src=tq36t2lpaholrfvmf5vvvo33io%40group.calendar.google.com&amp;color=%23865A5A&amp;src=04aguuoi2v2ab5s2hlq3fpdsdc%40group.calendar.google.com&amp;color=%2323164E&amp;src=lkrf1dct45ih6000dio3h4hd84%40group.calendar.google.com&amp;color=%23711616&amp;src=mt7rjrmn7mc999n17fh0v6tg74%40group.calendar.google.com&amp;color=%2329527A&amp;src=8govm4taa04es44h0frehhtavk%40group.calendar.google.com&amp;color=%23333333&amp;src=uumg310j4bb0bo14ksbho3ldmc%40group.calendar.google.com&amp;color=%2323164E&amp;src=h3imfejofhi4vcbosk3oo26sks%40group.calendar.google.com&amp;color=%232952A3&amp;src=7dp2f93bbsanpemvf5numkp5mo%40group.calendar.google.com&amp;color=%232F6309&amp;src=9klgfno8eelufabiqrroh7qqoc%40group.calendar.google.com&amp;color=%236B3304&amp;src=vc294c09ropckvmeekoq98p38s%40group.calendar.google.com&amp;color=%230F4B38&amp;ctz=Europe%2FAmsterdam"  style="border-width:0" width="1000" height="600" frameborder="0" scrolling="no"></iframe>
 
 <hr>
 
 <h2>Instructions</h2>
-<p>TODO</p>
+
+<iframe src="https://docs.google.com/document/d/e/2PACX-1vTr2xXSF0r4PHDkPXEymZhAO_rZkCODJMq2arCj40_MvrN8sFgIEaFXtCI08omVKB1adtTSuSfObfZ_/pub?embedded=true" style="border-width:0" width="1000" height="2000" frameborder="0" scrolling="no"></iframe>
 
 </body>
 </html>
