--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>HMI Rooms & Equipment</h1>
+<h1>HMI Rooms &amp; Equipment</h1>
  <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTz=0&amp;mode=WEEK&amp;
               height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23ffffff&amp;
               src=hmiequipment%40gmail.com&amp;color=%23125A12&amp;
