--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+	padding: 22px;
+	font-family: Helvetica, sans-serif;
+}
+
+h2 {
+	margin-bottom: 5px;
+}
+
+#main-container {
+	max-width: 800px;
+	padding: 22px;
+	border: 1px solid #349beb;
+	background-color: #cee0ed;
+	margin-bottom: 42px;
+}
+</style>
+</head>
+
 <body>
- <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=hmiequipment%40gmail.com&amp;color=%23125A12&amp;src=tq36t2lpaholrfvmf5vvvo33io%40group.calendar.google.com&amp;color=%23711616&amp;src=9klgfno8eelufabiqrroh7qqoc%40group.calendar.google.com&amp;color=%23875509&amp;src=04aguuoi2v2ab5s2hlq3fpdsdc%40group.calendar.google.com&amp;color=%238C500B&amp;src=uumg310j4bb0bo14ksbho3ldmc%40group.calendar.google.com&amp;color=%238D6F47&amp;src=mt7rjrmn7mc999n17fh0v6tg74%40group.calendar.google.com&amp;color=%235F6B02&amp;src=h3imfejofhi4vcbosk3oo26sks%40group.calendar.google.com&amp;color=%232952A3&amp;src=7dp2f93bbsanpemvf5numkp5mo%40group.calendar.google.com&amp;color=%230F4B38&amp;src=vc294c09ropckvmeekoq98p38s%40group.calendar.google.com&amp;color=%23B1440E&amp;ctz=Europe%2FAmsterdam" style="border:solid 1px #777" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
+<div id="main-container">
+ <h2>NEW RESERVATION SYSTEM!</h2>
 
- <h1>NEW RESERVATION SYSTEM!</h1>
-
- <h1>ALL RESERVATION REQUESTS MUST BE PLACED THROUGH OUR NEW BOOKING SYSTEM:</h1>
-
- <a href="https://utwente-interaction-lab.github.io/reservations.html">https://utwente-interaction-lab.github.io/reservations.html</a>
-<br><br>
+ <h2>All reservation requests must be placed through our new booking system:</h2>
+ <h2><a href="https://utwente-interaction-lab.github.io/reservations.html">https://utwente-interaction-lab.github.io/reservations.html</a></h2>
+<br><br><br><br>
  Please <a href="mailto:interaction-lab-eemcs@utwente.nl">contact us</a> if the equipment you are looking for is not yet listed in the new system, then we will add it promptly
 <br><br>
- Ongoing legacy reservations are still listed in the calendar above and will be transferred to the new system soon
+ Ongoing legacy reservations are still listed in the calendar below and will be transferred to the new system soon
+</div>
 
+ <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=2&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=hmiequipment%40gmail.com&amp;color=%23125A12&amp;src=tq36t2lpaholrfvmf5vvvo33io%40group.calendar.google.com&amp;color=%23711616&amp;src=9klgfno8eelufabiqrroh7qqoc%40group.calendar.google.com&amp;color=%23875509&amp;src=04aguuoi2v2ab5s2hlq3fpdsdc%40group.calendar.google.com&amp;color=%238C500B&amp;src=uumg310j4bb0bo14ksbho3ldmc%40group.calendar.google.com&amp;color=%238D6F47&amp;src=mt7rjrmn7mc999n17fh0v6tg74%40group.calendar.google.com&amp;color=%235F6B02&amp;src=h3imfejofhi4vcbosk3oo26sks%40group.calendar.google.com&amp;color=%232952A3&amp;src=7dp2f93bbsanpemvf5numkp5mo%40group.calendar.google.com&amp;color=%230F4B38&amp;src=vc294c09ropckvmeekoq98p38s%40group.calendar.google.com&amp;color=%23B1440E&amp;ctz=Europe%2FAmsterdam" style="border:solid 1px #777" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
 
  
 </body>
